--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -374,6 +374,10 @@
                 <source>message_email_already_exists</source>
                 <target>Email already exists</target>
             </trans-unit>
+            <trans-unit id="title_app">
+                <source>title_app</source>
+                <target>Homepage</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
