--- a/translations/messages.pl.xlf
+++ b/translations/messages.pl.xlf
@@ -226,9 +226,9 @@
                 <source>label_authors</source>
                 <target>Autorzy</target>
             </trans-unit>
-            <trans-unit id="label_elements">
-                <source>label_elements</source>
-                <target>Elementy</target>
+            <trans-unit id="label_projects">
+                <source>label_projects</source>
+                <target>Projekty</target>
             </trans-unit>
             <trans-unit id="title_tag_details">
                 <source>title_tag_details</source>
@@ -290,9 +290,9 @@
                 <source>message_out_of_stock</source>
                 <target>Brak elementu na stanie!</target>
             </trans-unit>
-            <trans-unit id="message_category_contains_elements">
-                <source>message_category_contains_elements</source>
-                <target>Kategoria zawiera elementy!</target>
+            <trans-unit id="message_category_contains_projects">
+                <source>message_category_contains_projects</source>
+                <target>Kategoria zawiera projekty!</target>
             </trans-unit>
             <trans-unit id="message_returned_successfully">
                 <source>message_returned_successfully</source>
@@ -346,9 +346,9 @@
                 <source>title_author_edit</source>
                 <target>Edycja autora</target>
             </trans-unit>
-            <trans-unit id="message_tag_contains_elements">
-                <source>message_tag_contains_elements</source>
-                <target>Tag zawiera elementy</target>
+            <trans-unit id="message_tag_contains_projects">
+                <source>message_tag_contains_projects</source>
+                <target>Tag zawiera projekty</target>
             </trans-unit>
             <trans-unit id="title_user">
                 <source>title_user</source>
