--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -226,6 +226,14 @@
                 <source>title_project_create</source>
                 <target>Create Project</target>
             </trans-unit>
+            <trans-unit id="title_project_edit">
+                <source>title_project_edit</source>
+                <target>Edit Project</target>
+            </trans-unit>
+            <trans-unit id="title_project_delete">
+                <source>title_project_delete</source>
+                <target>Delete Project</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
