--- a/translations/messages.pl.xlf
+++ b/translations/messages.pl.xlf
@@ -2,6 +2,10 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
     <file source-language="en" datatype="plaintext" original="file.ext">
         <body>
+            <trans-unit id="title_about">
+                <source>title_about</source>
+                <target>Jak działa aplikacja?</target>
+            </trans-unit>
             <trans-unit id="action_view">
                 <source>action_view</source>
                 <target>Zobacz</target>
